# matmul_optimizer

./: .gitignore  .gitmessage  AGENTS.md  CMakeLists.txt  README.md
artifacts/: README.md
blog/harness-engineering-human-in-the-loop-cuda-matmul/: README.md  index.md  render_round_tree_pretty.py
configs/: fixed_bf16_gemm_v1.json  ncu_metrics_core.txt
docs/: benchmark_spec.md  codex_workflow.md  commit_convention.md  heuristics.md  llm_workflow.md  node_b_protocol.md  node_c_protocol.md  pipeline_graph.md  search_policy.md  search_refactor_plan.md  supervisor_protocol.md
heuristic_dataset/: README.md  attempts.jsonl  build_dataset.py  diagnoses.jsonl  manifest.json
include/: kernel_api.h  runner_contract.h
scripts/: eval_kernel.py  generate_fixed_bf16_dataset.py  gpu_lock.py  graph.py  ncu_analysis.py  run_cublas_baseline.py  run_cutlass_baseline.py  search_policy.py  state_lib.py  sweep_fixed_main_tiles.py
src/kernels/: bf16_gemm_v1.cu
src/runner/: cublas_main.cu  cutlass_main.cu  main.cpp
state/: README.md  active_direction.json  autotune_round18_main_tiles.json  autotune_round18_main_tiles.md  benchmark_baselines.md  benchmark_state.json  current_focus.md  diagnosis_history.jsonl  family_ledger.json  graph_state.json  human_guidance.md  human_review.md  latest_attempt.json  latest_diagnosis.json  latest_ncu_summary.json  latest_ncu_summary.md  latest_run.json  latest_run.md  migration_handoff.md  node_b_context.md  node_c_context.md  pause_handoff.md  progress.md  round_history.jsonl  round_loop_state.json  rounds.md  run_registry.jsonl  search_candidates.json  search_closed.jsonl  search_frontier.json  search_state.json  supervisor_context.md  supervisor_task.json
tests/: test_ncu_rich_handoff.py
tests/fixtures/ncu/: details_page.csv  headline_metrics.csv  import_raw_prev.csv  source_page.csv  source_page_prev.csv
todo/: 01_first_host_gpu_run.md  02_cutlass_runner.md  03_cutlass_baseline_and_ncu.md  04_prepare_agent_inputs.md  README.md  agent_input_manifest.json  agent_input_snapshot.md
